## News for package rnirs

##----------------- Version 1.6-12

- Default values of argument "nsim" in functions stahel and pca.rob has changed.


##----------------- Version 1.6-11

- Fonction influ.pls has been temporarely removed.

- New functions: 

  stahel (Stahel-Donoho outlyingness)
  
  .resid.pls in zfinctions.R

- Changes in functions pca.cr and pca.rob: argument "nrep" has been replaced by "nsim". 


##----------------- Version 1.6-10

- Fonction fda has been renamed to fda.svd (FDA using SVD), and
a new function fda (using eigen decomposition) has been created.


##----------------- Version 1.6-9

- Default value of argument prior in function daprob has changed.



##----------------- Version 1.6-8

- Meaning of parameter theta in functions dasdod has been modified (multiplies OD instead of SD).



##----------------- Version 1.6-7

- Functions fda, centers and matB have been made faster.

- Argument theta in function dasdod has been removed (this parameter is automatically varied in the function).

- Code cleaning in discrimination functions.


##----------------- Version 1.6-6

- Function dasdod have been simplified. Some arguments have been removed.


##----------------- Version 1.6-5

- Function pca.rob has been added.


##----------------- Version 1.6-4

- Modification of cutoff calculation in scordis and odis. Cutoff calculations have been removed from function dis.

- Function pca.rob has been temporarily removed.


##----------------- Version 1.6-3

- Simplification and improvement of function pca.rob. Some arguments have been removed.

- Object xss have been renamed eigs in all the PCA functions.


##----------------- Version 1.6-2

- Simplification of functions dis, scordis, odis, lscordis, lodis. Standardized distances
are calculated in a more direct way. Arguments cri and out have been removed.

- Order of arguments in .dis and .mah have changed.


##----------------- Version 1.6-1
